# studia

./: .bash_history  .gitconfig  .gitignore  .viminfo  7seg_led.bas  PK1.bas  button.bas  clock.bas  d  dwa  klawiaturaAT.bas  kopiowanie  led2_pwm.bas  mainmenu  pierwszyskrypt  pwm_timer.bas  rtc.bas  shifter  snake_rotate.bas  stoper.vdl  toggle.bas  trzy
Semestr 6/: AC_.bas  temp.bas  temp_times_2.bas
Semestr 6/GUI/QTApps/Claude's/: CMakeLists.txt  mainwindow.h  worker.h
Semestr III/: sqlday2.txt  (+2 more)
Semestr IV/ProgramowanieObiektowe/DungeonCrawlerCMake/: CMakeLists.txt  cmake_install.cmake  instructions.md  instructions.md.backup  level0.txt  level1.txt
Semestr IV/ProgramowanieObiektowe/DungeonCrawlerCMake/src/: Tile.cpp  Tile.h  create.cpp  engine.cpp  engine.h  game.cpp  game.h  labyrinth.cpp  labyrinth.h  main.cpp  read_file.cpp  read_file.h  terminal_game.cpp  terminal_game.h  tile.cpp  tile.h  tile_sets.cpp  tile_sets.h
Semestr V/Zaawasowane Metody Obliczeniowe/FourierTransform/: .clangd  CMakeLists.txt  dane2_07.in  dane2_11.in  dane_07.in  dane_07_a.in  dane_11.in  dane_11_a.in  points.in
Semestr V/Zaawasowane Metody Obliczeniowe/FourierTransform/photos/: dff.csv  drawPoints.py  fft.csv  iDrawPoints.py  idff.csv  ifft.csv  noisy_fft.csv  noisy_ifft.csv
Semestr V/Zaawasowane Metody Obliczeniowe/FourierTransform/src/: 1d_noise.py  2d_fourier.py  dft.cpp  dft.h  drawPoints.py  fft.cpp  fft.h  graphs.py  main.cpp  noise.cpp  regression.cpp  regression.h
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/: .~lock.net1.txt#  CMakeLists.txt  NET  build  build.bat  build.sh  isingmodel.cpp  isingmodel.h  isingmodel.hpp  main.cpp  net.in  test  test.sh
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/clion_project/: CMakeLists.txt  SimulationModel.cpp  SimulationModel.h  main.cpp
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/current_model/: CMakeLists.txt  IsingModel.cpp  IsingModel.h  IsingStats.h  Sprawozdanie -  Demon Creutza.odt  Statistics.cpp  Statistics.h  createGraphs.sh  demon.csv  demon.in  main.cpp
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/current_model/results-1/: .~lock.bucketcount10.csv#  .~lock.bucketcount6.csv#  bucket 1.csv  bucket 2.csv  bucket 3.csv  bucket 4.csv  bucket 5.csv  bucket 6.csv  bucket 7.csv  bucket 8.csv  bucket 9.csv  bucket10.csv  bucketcount1.csv  bucketcount10.csv  bucketcount2.csv  bucketcount3.csv  bucketcount4.csv  bucketcount5.csv  bucketcount6.csv  bucketcount7.csv  bucketcount8.csv  bucketcount9.csv
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/old_model/: main.cpp
Semestr V/Zaawasowane Metody Obliczeniowe/IsingModel/test_outputs/: .~lock.net1.txt#  histogram.py  net1.csv  net1.txt  net2.csv  net2.txt  net3.csv  net3.txt  net4.csv  net4.txt
(+578 files in other folders)
